# hue_controller_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  hue_bridge.cpp  hue_bridge.h
